tests/dataset/tpc-h/compiler/cpp/q20.error
/tmp/TestCPPCompiler_TPCHQueriesq202259886729/001/prog.cpp:82:12: error: ‘l’ was not declared in this scope
   82 |   decltype(l.l_partkey) partkey;
      |            ^
/tmp/TestCPPCompiler_TPCHQueriesq202259886729/001/prog.cpp:82:12: error: ‘l’ was not declared in this scope
/tmp/TestCPPCompiler_TPCHQueriesq202259886729/001/prog.cpp:83:12: error: ‘l’ was not declared in this scope
   83 |   decltype(l.l_suppkey) suppkey;
      |            ^
/tmp/TestCPPCompiler_TPCHQueriesq202259886729/001/prog.cpp:83:12: error: ‘l’ was not declared in this scope
/tmp/TestCPPCompiler_TPCHQueriesq202259886729/001/prog.cpp:86:12: error: ‘l’ was not declared in this scope
   86 |   decltype(l) l;
      |            ^
/tmp/TestCPPCompiler_TPCHQueriesq202259886729/001/prog.cpp:86:12: error: ‘l’ was not declared in this scope
/tmp/TestCPPCompiler_TPCHQueriesq202259886729/001/prog.cpp:98:12: error: ‘s’ was not declared in this scope
   98 |   decltype(s.s_name) s_name;
      |            ^
/tmp/TestCPPCompiler_TPCHQueriesq202259886729/001/prog.cpp:98:12: error: ‘s’ was not declared in this scope
/tmp/TestCPPCompiler_TPCHQueriesq202259886729/001/prog.cpp:99:12: error: ‘s’ was not declared in this scope
   99 |   decltype(s.s_address) s_address;
      |            ^
/tmp/TestCPPCompiler_TPCHQueriesq202259886729/001/prog.cpp:99:12: error: ‘s’ was not declared in this scope
/tmp/TestCPPCompiler_TPCHQueriesq202259886729/001/prog.cpp: In lambda function:
/tmp/TestCPPCompiler_TPCHQueriesq202259886729/001/prog.cpp:285:21: error: no match for ‘operator==’ (operand types are ‘Shipped94’ and ‘Shipped94’)
  285 |         if (__g.key == __key) {
      |             ~~~~~~~ ^~ ~~~~~
      |                 |      |
      |                 |      Shipped94
      |                 Shipped94
/tmp/TestCPPCompiler_TPCHQueriesq202259886729/001/prog.cpp:286:41: error: cannot convert ‘Lineitem’ to ‘int’ in initialization
  286 |           __g.items.push_back(__struct7{l});
      |                                         ^
      |                                         |
      |                                         Lineitem
/tmp/TestCPPCompiler_TPCHQueriesq202259886729/001/prog.cpp:293:63: error: cannot convert ‘Lineitem’ to ‘int’ in initialization
  293 |             __struct8{__key, std::vector<__struct7>{__struct7{l}}});
      |                                                               ^
      |                                                               |
      |                                                               Lineitem
/tmp/TestCPPCompiler_TPCHQueriesq202259886729/001/prog.cpp:293:65: error: no matching function for call to ‘std::vector<__struct7>::vector(<brace-enclosed initializer list>)’
  293 |             __struct8{__key, std::vector<__struct7>{__struct7{l}}});
      |                                                                 ^
In file included from /usr/include/c++/13/vector:66,
                 from /tmp/TestCPPCompiler_TPCHQueriesq202259886729/001/prog.cpp:9:
/usr/include/c++/13/bits/stl_vector.h:707:9: note: candidate: ‘template<class _InputIterator, class> std::vector<_Tp, _Alloc>::vector(_InputIterator, _InputIterator, const allocator_type&) [with <template-parameter-2-2> = _InputIterator; _Tp = __struct7; _Alloc = std::allocator<__struct7>]’
  707 |         vector(_InputIterator __first, _InputIterator __last,
      |         ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:707:9: note:   template argument deduction/substitution failed:
/usr/include/c++/13/bits/stl_vector.h:678:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(std::initializer_list<_Tp>, const allocator_type&) [with _Tp = __struct7; _Alloc = std::allocator<__struct7>; allocator_type = std::allocator<__struct7>]’
  678 |       vector(initializer_list<value_type> __l,
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:678:7: note:   conversion of argument 1 would be ill-formed:
/usr/include/c++/13/bits/stl_vector.h:659:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(std::vector<_Tp, _Alloc>&&, std::__type_identity_t<_Alloc>&) [with _Tp = __struct7; _Alloc = std::allocator<__struct7>; std::__type_identity_t<_Alloc> = std::allocator<__struct7>]’
  659 |       vector(vector&& __rv, const __type_identity_t<allocator_type>& __m)
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:659:7: note:   candidate expects 2 arguments, 1 provided
/usr/include/c++/13/bits/stl_vector.h:640:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(std::vector<_Tp, _Alloc>&&, const allocator_type&, std::false_type) [with _Tp = __struct7; _Alloc = std::allocator<__struct7>; allocator_type = std::allocator<__struct7>; std::false_type = std::integral_constant<bool, false>]’
  640 |       vector(vector&& __rv, const allocator_type& __m, false_type)
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:640:7: note:   candidate expects 3 arguments, 1 provided
/usr/include/c++/13/bits/stl_vector.h:635:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(std::vector<_Tp, _Alloc>&&, const allocator_type&, std::true_type) [with _Tp = __struct7; _Alloc = std::allocator<__struct7>; allocator_type = std::allocator<__struct7>; std::true_type = std::integral_constant<bool, true>]’
  635 |       vector(vector&& __rv, const allocator_type& __m, true_type) noexcept
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:635:7: note:   candidate expects 3 arguments, 1 provided
/usr/include/c++/13/bits/stl_vector.h:624:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(const std::vector<_Tp, _Alloc>&, std::__type_identity_t<_Alloc>&) [with _Tp = __struct7; _Alloc = std::allocator<__struct7>; std::__type_identity_t<_Alloc> = std::allocator<__struct7>]’
  624 |       vector(const vector& __x, const __type_identity_t<allocator_type>& __a)
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:624:7: note:   candidate expects 2 arguments, 1 provided
/usr/include/c++/13/bits/stl_vector.h:620:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(std::vector<_Tp, _Alloc>&&) [with _Tp = __struct7; _Alloc = std::allocator<__struct7>]’
  620 |       vector(vector&&) noexcept = default;
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:620:7: note:   conversion of argument 1 would be ill-formed:
/usr/include/c++/13/bits/stl_vector.h:601:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(const std::vector<_Tp, _Alloc>&) [with _Tp = __struct7; _Alloc = std::allocator<__struct7>]’
  601 |       vector(const vector& __x)
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:601:7: note:   conversion of argument 1 would be ill-formed:
/usr/include/c++/13/bits/stl_vector.h:569:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(size_type, const value_type&, const allocator_type&) [with _Tp = __struct7; _Alloc = std::allocator<__struct7>; size_type = long unsigned int; value_type = std::vector<__struct7>::value_type; allocator_type = std::allocator<__struct7>]’
  569 |       vector(size_type __n, const value_type& __value,
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:569:7: note:   candidate expects 3 arguments, 1 provided
/usr/include/c++/13/bits/stl_vector.h:556:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(size_type, const allocator_type&) [with _Tp = __struct7; _Alloc = std::allocator<__struct7>; size_type = long unsigned int; allocator_type = std::allocator<__struct7>]’
  556 |       vector(size_type __n, const allocator_type& __a = allocator_type())
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:556:7: note:   conversion of argument 1 would be ill-formed:
/usr/include/c++/13/bits/stl_vector.h:542:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(const allocator_type&) [with _Tp = __struct7; _Alloc = std::allocator<__struct7>; allocator_type = std::allocator<__struct7>]’
  542 |       vector(const allocator_type& __a) _GLIBCXX_NOEXCEPT
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:542:7: note:   conversion of argument 1 would be ill-formed:
/usr/include/c++/13/bits/stl_vector.h:531:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector() [with _Tp = __struct7; _Alloc = std::allocator<__struct7>]’
  531 |       vector() = default;
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:531:7: note:   candidate expects 0 arguments, 1 provided
/tmp/TestCPPCompiler_TPCHQueriesq202259886729/001/prog.cpp: In lambda function:
/tmp/TestCPPCompiler_TPCHQueriesq202259886729/001/prog.cpp:302:60: error: ‘struct __struct7’ has no member named ‘l_quantity’
  302 |             std::vector<decltype(std::declval<__struct7>().l_quantity)> __items;
      |                                                            ^~~~~~~~~~
/tmp/TestCPPCompiler_TPCHQueriesq202259886729/001/prog.cpp:302:60: error: ‘struct __struct7’ has no member named ‘l_quantity’
/tmp/TestCPPCompiler_TPCHQueriesq202259886729/001/prog.cpp:302:71: error: template argument 1 is invalid
  302 |             std::vector<decltype(std::declval<__struct7>().l_quantity)> __items;
      |                                                                       ^
/tmp/TestCPPCompiler_TPCHQueriesq202259886729/001/prog.cpp:302:71: error: template argument 2 is invalid
/tmp/TestCPPCompiler_TPCHQueriesq202259886729/001/prog.cpp:304:23: error: request for member ‘push_back’ in ‘__items’, which is of non-class type ‘int’
  304 |               __items.push_back(x.l_quantity);
      |                       ^~~~~~~~~
/tmp/TestCPPCompiler_TPCHQueriesq202259886729/001/prog.cpp:304:35: error: ‘struct __struct7’ has no member named ‘l_quantity’
  304 |               __items.push_back(x.l_quantity);
      |                                   ^~~~~~~~~~
/tmp/TestCPPCompiler_TPCHQueriesq202259886729/001/prog.cpp: In instantiation of ‘main()::<lambda()>::<lambda(auto:1)> [with auto:1 = int]’:
/tmp/TestCPPCompiler_TPCHQueriesq202259886729/001/prog.cpp:301:13:   required from here
/tmp/TestCPPCompiler_TPCHQueriesq202259886729/001/prog.cpp:300:38: error: request for member ‘begin’ in ‘v’, which is of non-class type ‘int’
  300 |             return std::accumulate(v.begin(), v.end(), 0.0);
      |                                    ~~^~~~~
/tmp/TestCPPCompiler_TPCHQueriesq202259886729/001/prog.cpp:300:49: error: request for member ‘end’ in ‘v’, which is of non-class type ‘int’
  300 |             return std::accumulate(v.begin(), v.end(), 0.0);
      |                                               ~~^~~
/tmp/TestCPPCompiler_TPCHQueriesq202259886729/001/prog.cpp: In function ‘int main()’:
/tmp/TestCPPCompiler_TPCHQueriesq202259886729/001/prog.cpp:310:5: error: conversion from ‘vector<__struct9>’ to non-scalar type ‘vector<__struct7>’ requested
  276 |   std::vector<__struct7> shipped_94 = ([&]() {
      |                                       ~~~~~~~~
  277 |     std::vector<__struct8> __groups;
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  278 |     for (auto l : lineitem) {
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~
  279 |       if (!(((l.l_shipdate >= std::string("1994-01-01")) &&
      |       ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  280 |              (l.l_shipdate < std::string("1995-01-01")))))
      |              ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  281 |         continue;
      |         ~~~~~~~~~
  282 |       auto __key = Shipped94{l.l_partkey, l.l_suppkey};
      |       ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  283 |       bool __found = false;
      |       ~~~~~~~~~~~~~~~~~~~~~
  284 |       for (auto &__g : __groups) {
      |       ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  285 |         if (__g.key == __key) {
      |         ~~~~~~~~~~~~~~~~~~~~~~~
  286 |           __g.items.push_back(__struct7{l});
      |           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  287 |           __found = true;
      |           ~~~~~~~~~~~~~~~
  288 |           break;
      |           ~~~~~~
  289 |         }
      |         ~
  290 |       }
      |       ~
  291 |       if (!__found) {
      |       ~~~~~~~~~~~~~~~
  292 |         __groups.push_back(
      |         ~~~~~~~~~~~~~~~~~~~
  293 |             __struct8{__key, std::vector<__struct7>{__struct7{l}}});
      |             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  294 |       }
      |       ~
  295 |     }
      |     ~
  296 |     std::vector<__struct9> __items;
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  297 |     for (auto &g : __groups) {
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~
  298 |       __items.push_back(__struct9{
      |       ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  299 |           g.key.partkey, g.key.suppkey, ([&](auto v) {
      |           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  300 |             return std::accumulate(v.begin(), v.end(), 0.0);
      |             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  301 |           })(([&]() {
      |           ~~~~~~~~~~~
  302 |             std::vector<decltype(std::declval<__struct7>().l_quantity)> __items;
      |             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  303 |             for (auto x : g.items) {
      |             ~~~~~~~~~~~~~~~~~~~~~~~~
  304 |               __items.push_back(x.l_quantity);
      |               ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  305 |             }
      |             ~
  306 |             return __items;
      |             ~~~~~~~~~~~~~~~
  307 |           })())});
      |           ~~~~~~~~
  308 |     }
      |     ~
  309 |     return __items;
      |     ~~~~~~~~~~~~~~~
  310 |   })();
      |   ~~^~
/tmp/TestCPPCompiler_TPCHQueriesq202259886729/001/prog.cpp: In lambda function:
/tmp/TestCPPCompiler_TPCHQueriesq202259886729/001/prog.cpp:312:26: error: ‘ps’ was not declared in this scope
  312 |     std::vector<decltype(ps.ps_suppkey)> __items;
      |                          ^~
/tmp/TestCPPCompiler_TPCHQueriesq202259886729/001/prog.cpp:312:40: error: template argument 1 is invalid
  312 |     std::vector<decltype(ps.ps_suppkey)> __items;
      |                                        ^
/tmp/TestCPPCompiler_TPCHQueriesq202259886729/001/prog.cpp:312:40: error: template argument 2 is invalid
/tmp/TestCPPCompiler_TPCHQueriesq202259886729/001/prog.cpp:318:38: error: ‘struct __struct7’ has no member named ‘partkey’
  318 |           if (!(((ps.ps_partkey == s.partkey) && (ps.ps_suppkey == s.suppkey))))
      |                                      ^~~~~~~
/tmp/TestCPPCompiler_TPCHQueriesq202259886729/001/prog.cpp:318:70: error: ‘struct __struct7’ has no member named ‘suppkey’
  318 |           if (!(((ps.ps_partkey == s.partkey) && (ps.ps_suppkey == s.suppkey))))
      |                                                                      ^~~~~~~
/tmp/TestCPPCompiler_TPCHQueriesq202259886729/001/prog.cpp:322:46: error: ‘struct __struct7’ has no member named ‘qty’
  322 |                  (ps.ps_availqty > ((0.5 * s.qty))))))
      |                                              ^~~
/tmp/TestCPPCompiler_TPCHQueriesq202259886729/001/prog.cpp:324:19: error: request for member ‘push_back’ in ‘__items’, which is of non-class type ‘int’
  324 |           __items.push_back(ps.ps_suppkey);
      |                   ^~~~~~~~~
/tmp/TestCPPCompiler_TPCHQueriesq202259886729/001/prog.cpp: In lambda function:
/tmp/TestCPPCompiler_TPCHQueriesq202259886729/001/prog.cpp:331:36: error: ‘s’ was not declared in this scope
  331 |     std::vector<std::pair<decltype(s.s_name), Result>> __items;
      |                                    ^
/tmp/TestCPPCompiler_TPCHQueriesq202259886729/001/prog.cpp:331:47: error: template argument 1 is invalid
  331 |     std::vector<std::pair<decltype(s.s_name), Result>> __items;
      |                                               ^~~~~~
/tmp/TestCPPCompiler_TPCHQueriesq202259886729/001/prog.cpp:331:53: error: template argument 1 is invalid
  331 |     std::vector<std::pair<decltype(s.s_name), Result>> __items;
      |                                                     ^~
/tmp/TestCPPCompiler_TPCHQueriesq202259886729/001/prog.cpp:331:53: error: template argument 2 is invalid
/tmp/TestCPPCompiler_TPCHQueriesq202259886729/001/prog.cpp:336:43: error: request for member ‘begin’ in ‘target_partkeys’, which is of non-class type ‘int’
  336 |         if (!(((std::find(target_partkeys.begin(), target_partkeys.end(),
      |                                           ^~~~~
/tmp/TestCPPCompiler_TPCHQueriesq202259886729/001/prog.cpp:336:68: error: request for member ‘end’ in ‘target_partkeys’, which is of non-class type ‘int’
  336 |         if (!(((std::find(target_partkeys.begin(), target_partkeys.end(),
      |                                                                    ^~~
/tmp/TestCPPCompiler_TPCHQueriesq202259886729/001/prog.cpp:337:59: error: request for member ‘end’ in ‘target_partkeys’, which is of non-class type ‘int’
  337 |                           s.s_suppkey) != target_partkeys.end()) &&
      |                                                           ^~~
/tmp/TestCPPCompiler_TPCHQueriesq202259886729/001/prog.cpp:340:17: error: request for member ‘push_back’ in ‘__items’, which is of non-class type ‘int’
  340 |         __items.push_back({s.s_name, Result{s.s_name, s.s_address}});
      |                 ^~~~~~~~~
/tmp/TestCPPCompiler_TPCHQueriesq202259886729/001/prog.cpp:340:47: error: cannot convert ‘std::string’ {aka ‘std::__cxx11::basic_string<char>’} to ‘int’ in initialization
  340 |         __items.push_back({s.s_name, Result{s.s_name, s.s_address}});
      |                                             ~~^~~~~~
      |                                               |
      |                                               std::string {aka std::__cxx11::basic_string<char>}
/tmp/TestCPPCompiler_TPCHQueriesq202259886729/001/prog.cpp:343:23: error: request for member ‘begin’ in ‘__items’, which is of non-class type ‘int’
  343 |     std::sort(__items.begin(), __items.end(),
      |                       ^~~~~
/tmp/TestCPPCompiler_TPCHQueriesq202259886729/001/prog.cpp:343:40: error: request for member ‘end’ in ‘__items’, which is of non-class type ‘int’
  343 |     std::sort(__items.begin(), __items.end(),
      |                                        ^~~
/tmp/TestCPPCompiler_TPCHQueriesq202259886729/001/prog.cpp:346:20: error: ‘begin’ was not declared in this scope; did you mean ‘std::begin’?
  346 |     for (auto &p : __items)
      |                    ^~~~~~~
      |                    std::begin
In file included from /usr/include/c++/13/string:53,
                 from /usr/include/c++/13/bits/locale_classes.h:40,
                 from /usr/include/c++/13/bits/ios_base.h:41,
                 from /usr/include/c++/13/ios:44,
                 from /usr/include/c++/13/ostream:40,
                 from /usr/include/c++/13/iostream:41,
                 from /tmp/TestCPPCompiler_TPCHQueriesq202259886729/001/prog.cpp:3:
/usr/include/c++/13/bits/range_access.h:114:37: note: ‘std::begin’ declared here
  114 |   template<typename _Tp> const _Tp* begin(const valarray<_Tp>&) noexcept;
      |                                     ^~~~~
/tmp/TestCPPCompiler_TPCHQueriesq202259886729/001/prog.cpp:346:20: error: ‘end’ was not declared in this scope; did you mean ‘std::end’?
  346 |     for (auto &p : __items)
      |                    ^~~~~~~
      |                    std::end
/usr/include/c++/13/bits/range_access.h:116:37: note: ‘std::end’ declared here
  116 |   template<typename _Tp> const _Tp* end(const valarray<_Tp>&) noexcept;
      |                                     ^~~
